// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fragment > C1CCC1 1`] = `
[
  {
    "atomMap": [
      0,
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
    "parentIDCode": "gBP@DiVj\`@",
  },
  {
    "atomMap": [
      1,
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
    "parentIDCode": "gBP@DiVj\`@",
  },
  {
    "atomMap": [
      0,
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 0,
        "atom2": 3,
        "index": 3,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
    "parentIDCode": "gBP@DiVj\`@",
  },
  {
    "atomMap": [
      2,
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 0,
        "atom2": 3,
        "index": 3,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
    "parentIDCode": "gBP@DiVj\`@",
  },
  {
    "fragmentType": "molecule",
    "idCode": "gBP@DiVj\`@",
    "mfInfo": {
      "atoms": {
        "C": 4,
        "H": 8,
      },
      "charge": 0,
      "mass": 56.10646961938721,
      "mf": "C4H8",
      "monoisotopicMass": 56.06260025784,
      "unsaturation": 1,
    },
    "parentIDCode": "gBP@DiVj\`@",
  },
]
`;

exports[`fragment > CC 1`] = `
[
  {
    "atomMap": [
      0,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
    "parentIDCode": "eF@Hp@",
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
    "parentIDCode": "eF@Hp@",
  },
  {
    "fragmentType": "molecule",
    "idCode": "eF@Hp@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 6,
      },
      "charge": 0,
      "mass": 30.06911631780516,
      "mf": "C2H6",
      "monoisotopicMass": 30.04695019338,
      "unsaturation": 0,
    },
    "parentIDCode": "eF@Hp@",
  },
]
`;

exports[`fragment > CCC 1`] = `
[
  {
    "atomMap": [
      0,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
    "parentIDCode": "eM@Hz@",
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
    "parentIDCode": "eM@Hz@",
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
    "parentIDCode": "eM@Hz@",
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
    "parentIDCode": "eM@Hz@",
  },
  {
    "fragmentType": "molecule",
    "idCode": "eM@Hz@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 8,
      },
      "charge": 0,
      "mass": 44.095733722651964,
      "mf": "C3H8",
      "monoisotopicMass": 44.06260025784,
      "unsaturation": 0,
    },
    "parentIDCode": "eM@Hz@",
  },
]
`;

exports[`fragment > CCCCC2CCC1C(CC)CC(=O)CC1C2 - with Hose Codes 1`] = `
[
  {
    "atomMap": [
      0,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_ImwzJCaUSaU@",
      "eM@HzCaJBhMXrolvyw}EApjipj\`",
      "gC\`@Dkj@xPhIPZHXisxcYrw[~bPNEUGBj@",
      "gJP@DkZhCaB\`eAjabgI_T[NV{S_zI@xUT\\Jj|HP",
      "gNp@DkVjj@xPhIPZxXirVk_\\[NV{S]u{~bPNEUGBjobDhQa@",
    ],
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      10,
    ],
    "cleavedBonds": [
      {
        "atom1": 9,
        "atom2": 10,
        "index": 9,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_ImwzJCaUSaU@",
      "eM@HzCaJBhMXrolvyo}EApjipjkrD@",
      "gJP@DkjhCaB\`eAjabgI_T[NUzsozI@xUT\\Jj~PSABD@",
      "dax@@DkfZjjDhCa@hHhMBCBcbSRssxPvNR|lmjvwgQDApjh\\Jj{HDpHPR\`cANB@",
      "dcLH@@rJIJIHusUUUVEQUGDApcTDtFcAaQqIiYyEeUu|XOCinZUu[[ucl|n{ozHcNEUKaUWf@bALBDDhIpPPbaMB@",
    ],
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      5,
      6,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObMfj}_zE@xUT\\JiNEUgBjnPD\`QALD@",
      "daD@@DjWzZjjdBab@xHJBJ@jAjCP\`phxdtl|~DKcToKKZuk{_tI@\\JjGBjIpjf\\Jj@D\`H\`S@aAJBLD@",
      "dcL@@LdbTTSUSUUUU\`TIQI@\\DEAE@UAMAhpXT\\RZV^QYU]_FEqjWeemZv}h{Mkn{~aHCaUPxUQNEUKaUWd@dADBXDHIPQ\`gAIB@",
      "foA@@@LdbTTVrJiKbjjjjjh\`JDTXhdPC\`\`JBE@R\`ePZ|A\`h\\IFbqxbYJgRYln_^A\\MQ^KImMYoMElkT~nMmm]ozDPCaUP\\JhcaUR\\Jjz\`AHADALABAJAFANAIAEA@",
      "fhiA@@@YEDeDddbeQbcMUUUUUDIQPaeBj@\\DYPRhETAjCTPLECaHtVODSITzSMesyB~bAxNc\\ZRzVr~ZKYZj}\\[[Z{_ZGotHcGBjdxURgBjLxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_ImozJCaUSaU@",
      "gC\`@Dij@xPhIPZHXisxcYjw]~bPNEUGBj@",
      "gJP@DiZhCaB\`eAjabgI_T[MV{c_zI@xUT\\Jj|HP",
      "gNp@Di^jj@xPhIPZxXirVk_\\[MV{c]u{~bPNEUGBjobDhQa@",
      "diD@@Di^Vjj\`Ca@hHhMRCBcbSRsrKzPvMS\\xkkVwkG_tQ@\\JjGBjoQAJBLDxHHP",
    ],
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      9,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 9,
        "index": 8,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_I]ozJCaUSaUW\`H",
      "gJP@DjZhCaB\`eAjabgI_TWMU{SwzI@xUT\\Jj~@QALD@",
      "dax@@DjVZjj@hCa@hHhMBCBcbSRssxPnMR|tnjvwgQDApjh\\Jj{@DPI\`R\`cANB@",
      "dcLH@@rJIJIHusUUUVEQUGDApaTCTFcAaQqIiYyEeUu|XOCinZUu[[ucl|n{ozHaNETsaUWf@bALBDDhIpPPbaMB@",
      "dk\\H@@RYVU^ntvjjjjpjJhx\`NDJ\`Z\`uXLJNIMKOHljniokAx]MsRnk[^l]gew[O_tQB\\JigBjnlADBXDHIPS\`\`aEBZDLH",
    ],
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      11,
      12,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 11,
        "index": 10,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 12,
        "atom2": 14,
        "index": 13,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObGfk]_zE@xUT\\JiNEUgBjnPD\`QALD@",
      "daDH@@RYVifjj\`j@xJJAJCJ@jCP\`phxdtl|~DGatwMJzmk{_tIH\\JiGBjqpjb\\Jj{PDPI\`P\`eAFB@",
      "dmtH@@RYVUifjjjpjJHZ\`NBb\`R\`r\`J\`uhLJNIMKOHljomAx]MsRnkZ~t]gU{}BRGBjQpjl\\JhgBjnLADBXDHIPQ\`\`aIB@",
      "dk\\H@@RYVUVftvjjjjpjJHZ\`NBb\`R\`r\`J\`uXLJNIMKOHljniokAx]MsRnkZ~t]gU{[O_tIH\\JiGBjqpjb\\JjzpDPI\`P\`eAFBBDdIhPp\`",
      "dg|H@@RYVUWimMjjjjhbhhajMHC\`hhDhLhBhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu^vsv}Pdapjd\\JkGBjIpjkk@Q@fABBTDXHHRPfaCB@",
    ],
    "idCode": "gJQDDEdkJS\\t@@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 2,
        "O": 1,
      },
      "charge": 0,
      "mass": 42.03675822590033,
      "mf": "C2H2O",
      "monoisotopicMass": 42.01056468403,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      12,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 11,
        "atom2": 12,
        "index": 11,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObGfk]_zE@xUT\\JiNEUgBjnPD\`QALD@",
      "daDH@@RYVifjj\`j@xJJAJCJ@jCP\`phxdtl|~DGatwMJzmk{_tIH\\JiGBjqpjb\\JjPDPI\`P\`eAFB\\D@",
      "dmtH@@RYVUifjjjpjJHZ\`NBb\`R\`r\`J\`uhLJNIMKOHljomAx]MsRnkZ~t]gUo}BRGBjQpjl\\JhgBjoLADBXDHIPQ\`gAIBJD@",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`hhDhLhBhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu[wcv}Pdapjd\\JkGBjIpjkk@Q@fABBTDXIpRPbaCB@",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GAHTBJCE@R\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVr~ZKYZj}\\[[Z{_tHdGBjPxUVGBjHxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "gJQDDEdkJS\\t@@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 2,
        "O": 1,
      },
      "charge": 0,
      "mass": 42.03675822590033,
      "mf": "C2H2O",
      "monoisotopicMass": 42.01056468403,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_ImozJCaUSaU@",
      "gC\`@Dij@xPhIPZHXisxcYjo[~bPNEUGBjoDD@",
      "gNp@DiYjj@xPhIPZxXirVk_\\[MU{Smu}~bPNEUGBjodDHRa@",
      "diD@@DiYVjj\`Ca@hHhMRCBcbSRsrKzPvMR|tmkV{kG_tQ@\\JjGBjoRABBTDxHHP",
      "dmt@@DiYWafjjjdRcb@xPJBJCV\`phxdtl|brj~tMcToMKZunzqv[W_tQ@\\JjGBjorABBTDxHHRPba@",
    ],
    "idCode": "gC\`H@liKT@@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 7,
      },
      "charge": 0,
      "mass": 43.08779296859618,
      "mf": "C3H7",
      "monoisotopicMass": 43.05477522561,
      "unsaturation": 0.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      11,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 11,
        "index": 10,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTFbFJ\\~HnZkvhTCaUQpjdxUV\\Jjy@RADDpP",
      "daD@@DjWZZjjdBbj@xHJBJBjAjCP\`phxdtl|~DKcToMIzmm{_tI@\\JjGBjipjf\\Jj@D\`H\`S@aAJBLD@",
      "dcLH@@RYVUZYjjjkBhhaj@xIJCJ@jBjCQ\`phxdtl|brjz~LGatwMJzmk{Qv]V}{}BQGBjqpjb\\JjgBjoLADBXDHIPQ\`gAIBJD@",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`dhLhBhJhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu[wcv}PdQpjl\\JhgBjipjkk@Q@fABBTDXIpRPbaCB@",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GADTFJ@eAR\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVr~ZKYZj}\\[[Z{_tHbGBjpxUQGBjhxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "gGQDLEfkJRwSP@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 4,
        "O": 1,
      },
      "charge": 0,
      "mass": 56.06337563074713,
      "mf": "C3H4O",
      "monoisotopicMass": 56.026214748490005,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      8,
      11,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 11,
        "atom2": 12,
        "index": 11,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKfj|zE@xUT\\JiNEUgBjnPD\`QALD@",
      "didH@@RYVzYjjiBhZ\`NBb\`R\`J\`Z\`uHLJNIMKOHoiAx]MsRnkZ~t]Pdapjd\\JhgBjYpjk}@Q@fABBTDXHHP",
      "dcLH@@RYVUzYjjjkBhhaj@xJJAJ@jAjCQ\`phxdtl|brjz~LGatwMJzmk{Qv]Wmw}BRGBjQpjb\\JigBjoLADBXDHIPQ\`\`aIBZD@",
      "dk\\H@@RYVUVftvjjjjpjJHZ\`NBb\`R\`J\`Z\`uXLJNIMKOHljniokAx]MsRnkZ~t]gU{[O_tIH\\JiGBjIpjf\\JjzpDPI\`P\`eAFBBDdIhPp\`",
      "dg|H@@RYVUWimMjjjjhbhhajMHC\`hhDhBhFhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu^vsv}Pdapjd\\JhgBjYpjkk@Q@fABBTDXHHRPfaCB@",
    ],
    "idCode": "gGPD@leYRYZj@@",
    "mfInfo": {
      "atoms": {
        "C": 4,
        "H": 8,
      },
      "charge": 0,
      "mass": 56.10646961938721,
      "mf": "C4H8",
      "monoisotopicMass": 56.06260025784,
      "unsaturation": 1,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 3,
        "atom2": 4,
        "index": 3,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_I]ozJCaUSaUW\`H",
      "gJP@DjZhCaB\`eAjabgI_TWMV{SozI@xUT\\Jj~@QALD@",
      "dax@@DjUZjh@xPJBJCP\`phxdtl|~DKcTwMKZmm{_tQ@\\JjGBjoPADBXDhHpP",
      "dmt@@DjUVvFjjjdBbb@xPJBJCV\`phxdtl|brj~tKcTwMKZmm{Qn]WotQ@\\JjGBjopADBXDhHpPPda@",
      "dkl@@DjUVuXZjjjk@hh\`R@xPJBJCU\`phxdtl|brjzf~lKcTwMKZmm{Qn]WmlwQDApjh\\Jj|\`DPI\`R\`cAABRDtHXP",
    ],
    "idCode": "gJPH@liJuP@",
    "mfInfo": {
      "atoms": {
        "C": 4,
        "H": 9,
      },
      "charge": 0,
      "mass": 57.114410373442986,
      "mf": "C4H9",
      "monoisotopicMass": 57.07042529007,
      "unsaturation": 0.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      8,
      12,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 12,
        "atom2": 14,
        "index": 13,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTFbFJ\\~H^ZkuhTCaUQpjdxUV\\Jjy@RADDpP",
      "didH@@RYUZYjjiJhX\`NBb\`R\`j\`Z\`uHLJNIMKOHoiAx]MsRnkZ~t]Pdapjd\\JjgBjYpjk}@Q@fABBTDXHHP",
      "dcLH@@RYVWZYjjjkBHjab@xJJAJBjAjCQ\`phxdtl|brjz~LGatwMJzmk{Qv]Wmw}BRGBjQpjj\\JigBjoLADBXDHIPQ\`gAIBZD@",
      "dk\\H@@RYVUVfTvjjjjpbJhX\`NBb\`R\`j\`Z\`uXLJNIMKOHljniokAx]MsRnkZ~t]gUo^O_tIH\\JiGBjipjf\\JjzpDPI\`P\`eAFB\\DdHhPp\`",
      "dg|H@@RYVUUieMjjjjhbHjabEHC\`hhDhJhFhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu[wcv}Pdapjd\\JjgBjYpjkk@Q@fABBTDXIpRPbaCB@",
    ],
    "idCode": "daxHPDAYiYR[[fj\`@",
    "mfInfo": {
      "atoms": {
        "C": 5,
        "H": 8,
        "O": 1,
      },
      "charge": 0,
      "mass": 84.11661044044072,
      "mf": "C5H8O",
      "monoisotopicMass": 84.05751487741,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      4,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKfk]_zE@xUT\\JiNEUgBjnPD\`QALD@",
      "daD@@DjWjZjjdB\`b@xHJBJ@jAjCP\`phxdtl|~DKcToMJzum{_tI@\\JjGBjIpjf\\Jj@D\`H\`S@aAJBLD@",
      "dmt@@LdbTRchZjjjpJDhH\`NBB\`b\`J\`F\`uhLJNIMKOHljomBxuKsRnmZ~\\]gUw}BPGBjapjb\\JhWBjoHAHBHDpHPR\`cANBBD@",
      "foAA@@@YEDeDehUSbmMUUUUQBTThxQH\`GABTCJBUAj\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVs^VKYVk]Z[[Z{_tHaGBjXxUTgBjtxUUuPBHBXBDBTBLB\\BRBJBZB@",
      "fhiA@@@YEDeDdeJeSbcMUUUUUDIQRcaDb@\\DIPLhITAjCTPLECaHtVODSITzSMesyB~bAxNc\\ZRzVs^VKYVk]\\[[Z{_ZGotHaGBjXxUTgBjLxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "dax@P@VRVTfWZjh@@",
    "mfInfo": {
      "atoms": {
        "C": 6,
        "H": 12,
      },
      "charge": 0,
      "mass": 84.15970442908082,
      "mf": "C6H12",
      "monoisotopicMass": 84.09390038676,
      "unsaturation": 1,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      4,
      5,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 4,
        "atom2": 16,
        "index": 17,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKfk]ozE@xUT\\JiNEUgBjnPD\`QALD@",
      "gOp@DjWkjjhJApQPR\`U@ZCWCENRu[{byjwZ]mntJApjhxUR\\JhnEU]\`I@bBDIPcB@",
      "deT@@DjUWkjjjk@hjcb@xHJBJAJ@jCR\`phxdtl|br~TKcTwMKZmmzqv[PdApjh\\JiGBjIpjkb@R@bABBTDxHHRP\`",
      "dg|@@DjUUWj{SjjjjjHJJhxaR@xHJBJAJ@jCS\`phxdtl|brjzfv~\\KcTwMKZmmzqv]V}\\}o_tI@\\JjGBjQpjb\\Jjz\`D\`H\`P\`eANBBDTIhPp\`",
      "fhiA@@@YEDeDdeJeSbcMUUUUUDIQRcaDb@\\DYPRhETAjCTPLECaHtVODSITzSMesyB~bAxNc\\ZRzVs^VKYVk]\\[[Z{_ZGotHcGBjdxURgBjLxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "dax@P@VRVTfWZjh@@",
    "mfInfo": {
      "atoms": {
        "C": 6,
        "H": 12,
      },
      "charge": 0,
      "mass": 84.15970442908082,
      "mf": "C6H12",
      "monoisotopicMass": 84.09390038676,
      "unsaturation": 1,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      8,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKej}ozE@xUT\\JiNEUgBjnPD\`QALD@",
      "did@@DjYmajjjpJHHR\`NBB\`b\`R\`J\`uHLJNIMKOHoiBxmKsRvm[^tWPdApjh\\JiGBjIpjkb@R@bALBDDhHpPP\`",
      "dk\\H@@RYVUVfTvjjjjpjJHZ\`NBR\`J\`j\`Z\`uXLJNIMKOHljniokAx]MsRnkZ~t]gUo^O_tID\\JhgBjipjf\\JjzpDPI\`P\`eAFB\\DdHhPp\`",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`dhBhJhFhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu[wcv}PdQpjb\\JjgBjYpjkk@Q@fABBTDXIpRPbaCB@",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GADTAJBe@r\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVr~ZKYZj}\\[[Z{_tHbGBjHxUUGBjXxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "diDHPFAYEYrJIJFjf\`@",
    "mfInfo": {
      "atoms": {
        "C": 6,
        "H": 10,
        "O": 1,
      },
      "charge": 0,
      "mass": 98.14322784528753,
      "mf": "C6H10O",
      "monoisotopicMass": 98.07316494186999,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      5,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTFbFJ\\~HnZmvhTCaUQpjdxUV\\Jjy@RADDpP",
      "gOp@DjWkjjhJApQPR\`m@zCWCENRu[{byjoZ[no_tJApjhxUU\\JinEU_\`I@bBXHPeBLH",
      "deT@@DjVVhZjjk@hR\`b@xHJBJBj@ZCR\`phxdtl|br~TKcToMJzukyqv]PdApjh\\JjgBjEpjkr@R@bALBDDhHpS\`\`a@",
      "dg|H@@rJIJIKPurzuUUUTQTUQqDdApQTCTBtFtFgAaQqIiYyEeUuMm|xOCinZUu[[uclvn{i{^hRDxUSNETkaUZxUUu\`H\`S@aAJBLDxIHQPfa@",
      "f\`qA@@@YEDeDdeJj\\TYjjjjjbDhiQpbQ@NBDhFTBj@uAhHFBapdZKGbIdj]Ifry|~BAxNc\\ZRzVs^VKYVk]\\[[Z{_[~aDHxUSGBjTxUQgBjnj@Q@S@P\`R\`Q\`S\`RPQPPpP",
    ],
    "idCode": "diD@P@VZVTeevjj\`@",
    "mfInfo": {
      "atoms": {
        "C": 7,
        "H": 14,
      },
      "charge": 0,
      "mass": 98.18632183392762,
      "mf": "C7H14",
      "monoisotopicMass": 98.10955045122,
      "unsaturation": 1,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      4,
      6,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 4,
        "atom2": 16,
        "index": 17,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTFbFJ\\~HnZkvhTCaUQpjdxUV\\Jjy@RADDpP",
      "daD@@DjWzZjjdBab@xHJBJBjAjCP\`phxdtl|~DKcToKKZuk{_tI@\\JjGBjipjf\\Jj@D\`H\`S@aAJBLD@",
      "dcL@@LdbTTSUSUUUU\`TIQI@\\DEAEAUAMAhpXT\\RZV^QYU]_FEqjWeemZv}h{Mkn{~aHCaUPxUUNEUKaUWd@dADBXDHIPQ\`gAIB@",
      "foA@@@LdbTTVrJiKbjjjjjh\`JDTXhdPC\`\`JBEAR\`ePZ|A\`h\\IFbqxbYJgRYln_^A\\MQ^KImMYoMElkT~nMmm]ozDPCaUP\\JjcaUR\\Jjz\`AHADALABAJAFANAIAEA@",
      "fhiA@@@YEDeDddbeQbcMUUUUUDIQPaeBj@\\DYP\\hITBjCTPLECaHtVODSITzSMesyB~bAxNc\\ZRzVr~ZKYZj}\\[[Z{_ZGotHcGBjxxUTgBjTxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "diD@P@VVVTfU^jj\`@",
    "mfInfo": {
      "atoms": {
        "C": 7,
        "H": 14,
      },
      "charge": 0,
      "mass": 98.18632183392762,
      "mf": "C7H14",
      "monoisotopicMass": 98.10955045122,
      "unsaturation": 1,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      6,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKek]ozE@xUT\\JiNEUgBjnPD\`QALD@",
      "daD@@DjYvzjjdBbB@xHJBJAJ@jCP\`phxdtl|~DKbtwKKZumztI@\\JjGBjQpjb\\Jjx\`D\`H\`S@aAJBLDxH",
      "dcl@@LdbbTRkSruUUUQAQAFDRPGAAPQPIPEPZLFEGDfegdVUWWqa\\VfyY[VmoZNsZonhR@xUTNETcaUDxUUu@I@Q@fABBTDXIpRPba@",
      "foAA@@@YEDeDddcQbcMUUUUQBDThXPh\`GABTCJCeAJ\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVr~ZKYZj}\\[[Z{_tHaGBjXxUWGBjdxUUuPBHBXBDBTBLB\\BRBJBFB@",
      "f\`qA@@@YEDeDddbjLTYjjjjjbDHiPpaQ@NBDhFTGJBUAhHFBapdZKGbIdj]Ifry|~BAxNc\\ZRzVr~ZKYZj}\\[[Z{_[~aDHxUSGBjxxUTgBjnj@Q@S@P\`R\`Q\`S\`RPQPPpP",
    ],
    "idCode": "ded@P@V^VTeeWjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 8,
        "H": 16,
      },
      "charge": 0,
      "mass": 112.21293923877442,
      "mf": "C8H16",
      "monoisotopicMass": 112.12520051568,
      "unsaturation": 1,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      7,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKek]ozE@xUT\\JiNEUgBjnPD\`QALD@",
      "daD@@DjYvzjjdBbB@xHJBJAJ@jCP\`phxdtl|~DKbtwKKZumztI@\\JjGBjQpjb\\Jjx\`D\`H\`S@aAJBLDxH",
      "dcl@@LdbbTRkSruUUUQAQAFDRPGAAPQPIPEPZLFEGDfegdVUWWqa\\VfyY[VmoZNsZonhR@xUTNETcaUDxUUu@I@Q@fABBTDXIpRPba@",
      "foAA@@@YEDeDddcQbcMUUUUQBDThXPh\`GABTCJCeAJ\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVr~ZKYZj}\\[[Z{_tHaGBjXxUWGBjdxUUuPBHBXBDBTBLB\\BRBJBFB@",
      "f\`qA@@@YEDeDddbjLTYjjjjjbDHiPpaQ@NBDhFTGJBUAhHFBapdZKGbIdj]Ifry|~BAxNc\\ZRzVr~ZKYZj}\\[[Z{_[~aDHxUSGBjxxUTgBjnj@Q@S@P\`R\`Q\`S\`RPQPPpP",
    ],
    "idCode": "dmtHPEAYIYRYf}XZjjf@@",
    "mfInfo": {
      "atoms": {
        "C": 8,
        "H": 12,
        "O": 1,
      },
      "charge": 0,
      "mass": 124.1805811468696,
      "mf": "C8H12O",
      "monoisotopicMass": 124.08881500633,
      "unsaturation": 3,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      6,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTFbFJ\\~HnZmvhTCaUQpjdxUV\\Jjy@RADDpP",
      "gOp@DjWkjjhJApQPR\`m@zCWCENRu[{byjoZ[no_tJApjhxUU\\JinEU_\`I@bBXHPeBLH",
      "deT@@DjVVhZjjk@hR\`b@xHJBJBj@ZCR\`phxdtl|br~TKcToMJzukyqv]PdApjh\\JjgBjEpjkr@R@bALBDDhHpS\`\`a@",
      "dg|H@@rJIJIKPurzuUUUTQTUQqDdApQTCTBtFtFgAaQqIiYyEeUuMm|xOCinZUu[[uclvn{i{^hRDxUSNETkaUZxUUu\`H\`S@aAJBLDxIHQPfa@",
      "f\`qA@@@YEDeDdeJj\\TYjjjjjbDhiQpbQ@NBDhFTBj@uAhHFBapdZKGbIdj]Ifry|~BAxNc\\ZRzVs^VKYVk]\\[[Z{_[~aDHxUSGBjTxUQgBjnj@Q@S@P\`R\`Q\`S\`RPQPPpP",
    ],
    "idCode": "dcLHPEAYeYRYeevzjjih@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 14,
        "O": 1,
      },
      "charge": 0,
      "mass": 138.20719855171637,
      "mf": "C9H14O",
      "monoisotopicMass": 138.10446507079,
      "unsaturation": 3,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      7,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 4,
        "atom2": 16,
        "index": 17,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTFbFJ\\~HnZkvhTCaUQpjdxUV\\Jjy@RADDpP",
      "daD@@DjWzZjjdBab@xHJBJBjAjCP\`phxdtl|~DKcToKKZuk{_tI@\\JjGBjipjf\\Jj@D\`H\`S@aAJBLD@",
      "dcL@@LdbTTSUSUUUU\`TIQI@\\DEAEAUAMAhpXT\\RZV^QYU]_FEqjWeemZv}h{Mkn{~aHCaUPxUUNEUKaUWd@dADBXDHIPQ\`gAIB@",
      "foA@@@LdbTTVrJiKbjjjjjh\`JDTXhdPC\`\`JBEAR\`ePZ|A\`h\\IFbqxbYJgRYln_^A\\MQ^KImMYoMElkT~nMmm]ozDPCaUP\\JjcaUR\\Jjz\`AHADALABAJAFANAIAEA@",
      "fhiA@@@YEDeDddbeQbcMUUUUUDIQPaeBj@\\DYP\\hITBjCTPLECaHtVODSITzSMesyB~bAxNc\\ZRzVr~ZKYZj}\\[[Z{_ZGotHcGBjxxUTgBjTxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "dcLHPMAYeYRYfWVFjjjX@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 14,
        "O": 1,
      },
      "charge": 0,
      "mass": 138.20719855171637,
      "mf": "C9H14O",
      "monoisotopicMass": 138.10446507079,
      "unsaturation": 3,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      7,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKej}ozE@xUT\\JiNEUgBjnPD\`QALD@",
      "did@@DjYmajjjpJHHR\`NBB\`b\`R\`J\`uHLJNIMKOHoiBxmKsRvm[^tWPdApjh\\JiGBjIpjkb@R@bALBDDhHpPP\`",
      "dk\\H@@RYVUVfTvjjjjpjJHZ\`NBR\`J\`j\`Z\`uXLJNIMKOHljniokAx]MsRnkZ~t]gUo^O_tID\\JhgBjipjf\\JjzpDPI\`P\`eAFB\\DdHhPp\`",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`dhBhJhFhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu[wcv}PdQpjb\\JjgBjYpjkk@Q@fABBTDXIpRPbaCB@",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GADTAJBe@r\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVr~ZKYZj}\\[[Z{_tHbGBjHxUUGBjXxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "dcL@P@VRVTfYwUnjjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 18,
      },
      "charge": 0,
      "mass": 138.25029254035647,
      "mf": "C10H18",
      "monoisotopicMass": 138.14085058014,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      5,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKfk]_zE@xUT\\JiNEUgBjnPD\`QALD@",
      "daD@@DjWjZjjdB\`b@xHJBJ@jAjCP\`phxdtl|~DKcToMJzum{_tI@\\JjGBjIpjf\\Jj@D\`H\`S@aAJBLD@",
      "dmt@@LdbTRchZjjjpJDhH\`NBB\`b\`J\`F\`uhLJNIMKOHljomBxuKsRnmZ~\\]gUw}BPGBjapjb\\JhWBjoHAHBHDpHPR\`cANBBD@",
      "foAA@@@YEDeDehUSbmMUUUUQBTThxQH\`GABTCJBUAj\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVs^VKYVk]Z[[Z{_tHaGBjXxUTgBjtxUUuPBHBXBDBTBLB\\BRBJBZB@",
      "fhiA@@@YEDeDdeJeSbcMUUUUUDIQRcaDb@\\DIPLhITAjCTPLECaHtVODSITzSMesyB~bAxNc\\ZRzVs^VKYVk]\\[[Z{_ZGotHaGBjXxUTgBjLxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "dklHPEAYMYRYeeunjjjZ\`@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 16,
        "O": 1,
      },
      "charge": 0,
      "mass": 152.23381595656318,
      "mf": "C10H16O",
      "monoisotopicMass": 152.12011513525002,
      "unsaturation": 3,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      6,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 4,
        "atom2": 16,
        "index": 17,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKfk]ozE@xUT\\JiNEUgBjnPD\`QALD@",
      "gOp@DjWkjjhJApQPR\`U@ZCWCENRu[{byjwZ]mntJApjhxUR\\JhnEU]\`I@bBDIPcB@",
      "deT@@DjUWkjjjk@hjcb@xHJBJAJ@jCR\`phxdtl|br~TKcTwMKZmmzqv[PdApjh\\JiGBjIpjkb@R@bABBTDxHHRP\`",
      "dg|@@DjUUWj{SjjjjjHJJhxaR@xHJBJAJ@jCS\`phxdtl|brjzfv~\\KcTwMKZmmzqv]V}\\}o_tI@\\JjGBjQpjb\\Jjz\`D\`H\`P\`eANBBDTIhPp\`",
      "fhiA@@@YEDeDdeJeSbcMUUUUUDIQRcaDb@\\DYPRhETAjCTPLECaHtVODSITzSMesyB~bAxNc\\ZRzVs^VKYVk]\\[[Z{_ZGotHcGBjdxURgBjLxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "dklHPCAYUYRVYewijjji\`@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 16,
        "O": 1,
      },
      "charge": 0,
      "mass": 152.23381595656318,
      "mf": "C10H16O",
      "monoisotopicMass": 152.12011513525002,
      "unsaturation": 3,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      7,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 12,
        "atom2": 14,
        "index": 13,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTFbFJ\\~H^ZkuhTCaUQpjdxUV\\Jjy@RADDpP",
      "didH@@RYUZYjjiJhX\`NBb\`R\`j\`Z\`uHLJNIMKOHoiAx]MsRnkZ~t]Pdapjd\\JjgBjYpjk}@Q@fABBTDXHHP",
      "dcLH@@RYVWZYjjjkBHjab@xJJAJBjAjCQ\`phxdtl|brjz~LGatwMJzmk{Qv]Wmw}BRGBjQpjj\\JigBjoLADBXDHIPQ\`gAIBZD@",
      "dk\\H@@RYVUVfTvjjjjpbJhX\`NBb\`R\`j\`Z\`uXLJNIMKOHljniokAx]MsRnkZ~t]gUo^O_tIH\\JiGBjipjf\\JjzpDPI\`P\`eAFB\\DdHhPp\`",
      "dg|H@@RYVUUieMjjjjhbHjabEHC\`hhDhJhFhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu[wcv}Pdapjd\\JjgBjYpjkk@Q@fABBTDXIpRPbaCB@",
    ],
    "idCode": "dkl@P@VQVTfYWu[jjjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 11,
        "H": 20,
      },
      "charge": 0,
      "mass": 152.27690994520327,
      "mf": "C11H20",
      "monoisotopicMass": 152.1565006446,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      4,
    ],
    "cleavedBonds": [
      {
        "atom1": 3,
        "atom2": 4,
        "index": 3,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_I]ozJCaUSaUW\`H",
      "gJP@DjZhCaB\`eAjabgI_TWMV{SozI@xUT\\Jj~@QALD@",
      "dax@@DjUZjh@xPJBJCP\`phxdtl|~DKcTwMKZmm{_tQ@\\JjGBjoPADBXDhHpP",
      "dmt@@DjUVvFjjjdBbb@xPJBJCV\`phxdtl|brj~tKcTwMKZmm{Qn]WotQ@\\JjGBjopADBXDhHpPPda@",
      "dkl@@DjUVuXZjjjk@hh\`R@xPJBJCU\`phxdtl|brjzf~lKcTwMKZmm{Qn]WmlwQDApjh\\Jj|\`DPI\`R\`cAABRDtHXP",
    ],
    "idCode": "dg|H\`CAYRYVugiiVjjjfh@@",
    "mfInfo": {
      "atoms": {
        "C": 12,
        "H": 19,
        "O": 1,
      },
      "charge": 0,
      "mass": 179.27911001220102,
      "mf": "C12H19O",
      "monoisotopicMass": 179.14359023194,
      "unsaturation": 3.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      7,
      12,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 11,
        "atom2": 12,
        "index": 11,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObKfj|zE@xUT\\JiNEUgBjnPD\`QALD@",
      "didH@@RYVzYjjiBhZ\`NBb\`R\`J\`Z\`uHLJNIMKOHoiAx]MsRnkZ~t]Pdapjd\\JhgBjYpjk}@Q@fABBTDXHHP",
      "dcLH@@RYVUzYjjjkBhhaj@xJJAJ@jAjCQ\`phxdtl|brjz~LGatwMJzmk{Qv]Wmw}BRGBjQpjb\\JigBjoLADBXDHIPQ\`\`aIBZD@",
      "dk\\H@@RYVUVftvjjjjpjJHZ\`NBb\`R\`J\`Z\`uXLJNIMKOHljniokAx]MsRnkZ~t]gU{[O_tIH\\JiGBjIpjf\\JjzpDPI\`P\`eAFBBDdIhPp\`",
      "dg|H@@RYVUWimMjjjjhbhhajMHC\`hhDhBhFhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu^vsv}Pdapjd\\JhgBjYpjkk@Q@fABBTDXHHRPfaCB@",
    ],
    "idCode": "do|HPDAYyYR[Yg]YVZjjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 12,
        "H": 20,
        "O": 1,
      },
      "charge": 0,
      "mass": 180.28705076625678,
      "mf": "C12H20O",
      "monoisotopicMass": 180.15141526417,
      "unsaturation": 3,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      8,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 11,
        "index": 10,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTFbFJ\\~HnZkvhTCaUQpjdxUV\\Jjy@RADDpP",
      "daD@@DjWZZjjdBbj@xHJBJBjAjCP\`phxdtl|~DKcToMIzmm{_tI@\\JjGBjipjf\\Jj@D\`H\`S@aAJBLD@",
      "dcLH@@RYVUZYjjjkBhhaj@xIJCJ@jBjCQ\`phxdtl|brjz~LGatwMJzmk{Qv]V}{}BQGBjqpjb\\JjgBjoLADBXDHIPQ\`gAIBJD@",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`dhLhBhJhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu[wcv}PdQpjl\\JhgBjipjkk@Q@fABBTDXIpRPbaCB@",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GADTFJ@eAR\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVr~ZKYZj}\\[[Z{_tHbGBjpxUQGBjhxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "do|@P@V^VTfYY_uijjjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 13,
        "H": 24,
      },
      "charge": 0,
      "mass": 180.33014475489688,
      "mf": "C13H24",
      "monoisotopicMass": 180.18780077352,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_ImozJCaUSaU@",
      "gC\`@Dij@xPhIPZHXisxcYjo[~bPNEUGBjoDD@",
      "gNp@DiYjj@xPhIPZxXirVk_\\[MU{Smu}~bPNEUGBjodDHRa@",
      "diD@@DiYVjj\`Ca@hHhMRCBcbSRsrKzPvMR|tmkV{kG_tQ@\\JjGBjoRABBTDxHHP",
      "dmt@@DiYWafjjjdRcb@xPJBJCV\`phxdtl|brj~tMcToMKZunzqv[W_tQ@\\JjGBjorABBTDxHHRPba@",
    ],
    "idCode": "foAAB@K@VTee[V]gEZjjjjZ\`@@",
    "mfInfo": {
      "atoms": {
        "C": 13,
        "H": 21,
        "O": 1,
      },
      "charge": 0,
      "mass": 193.30572741704782,
      "mf": "C13H21O",
      "monoisotopicMass": 193.15924029640001,
      "unsaturation": 3.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      8,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 11,
        "index": 10,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 12,
        "atom2": 14,
        "index": 13,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObGfk]_zE@xUT\\JiNEUgBjnPD\`QALD@",
      "daDH@@RYVifjj\`j@xJJAJCJ@jCP\`phxdtl|~DGatwMJzmk{_tIH\\JiGBjqpjb\\Jj{PDPI\`P\`eAFB@",
      "dmtH@@RYVUifjjjpjJHZ\`NBb\`R\`r\`J\`uhLJNIMKOHljomAx]MsRnkZ~t]gU{}BRGBjQpjl\\JhgBjnLADBXDHIPQ\`\`aIB@",
      "dk\\H@@RYVUVftvjjjjpjJHZ\`NBb\`R\`r\`J\`uXLJNIMKOHljniokAx]MsRnkZ~t]gU{[O_tIH\\JiGBjqpjb\\JjzpDPI\`P\`eAFBBDdIhPp\`",
      "dg|H@@RYVUWimMjjjjhbhhajMHC\`hhDhLhBhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu^vsv}Pdapjd\\JkGBjIpjkk@Q@fABBTDXHHRPfaCB@",
    ],
    "idCode": "f\`a@A@@KNeeIfV]}YJjjjjj\`@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 26,
      },
      "charge": 0,
      "mass": 194.3567621597437,
      "mf": "C14H26",
      "monoisotopicMass": 194.20345083798,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      11,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 11,
        "atom2": 12,
        "index": 11,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObGfk]_zE@xUT\\JiNEUgBjnPD\`QALD@",
      "daDH@@RYVifjj\`j@xJJAJCJ@jCP\`phxdtl|~DGatwMJzmk{_tIH\\JiGBjqpjb\\JjPDPI\`P\`eAFB\\D@",
      "dmtH@@RYVUifjjjpjJHZ\`NBb\`R\`r\`J\`uhLJNIMKOHljomAx]MsRnkZ~t]gUo}BRGBjQpjl\\JhgBjoLADBXDHIPQ\`gAIBJD@",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`hhDhLhBhMNCBcbSRsrKJkj[[yp^GS\\tkjvomGYu[wcv}Pdapjd\\JkGBjIpjkk@Q@fABBTDXIpRPbaCB@",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GAHTBJCE@R\`uxCAPxRMEcqDrUNdsY\\~|AxNc\\ZRzVr~ZKYZj}\\[[Z{_tHdGBjPxUVGBjHxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "f\`a@A@@KNegHhheDdlTrUUUUUT@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 26,
      },
      "charge": 0,
      "mass": 194.3567621597437,
      "mf": "C14H26",
      "monoisotopicMass": 194.20345083798,
      "unsaturation": 2,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_ImozJCaUSaU@",
      "gC\`@Dij@xPhIPZHXisxcYjw]~bPNEUGBj@",
      "gJP@DiZhCaB\`eAjabgI_T[MV{c_zI@xUT\\Jj|HP",
      "gNp@Di^jj@xPhIPZxXirVk_\\[MV{c]u{~bPNEUGBjobDhQa@",
      "diD@@Di^Vjj\`Ca@hHhMRCBcbSRsrKzPvMS\\xkkVwkG_tQ@\\JjGBjoQAJBLDxHHP",
    ],
    "idCode": "f\`qAB@G@VTeYVugxKQjjjjij@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 23,
        "O": 1,
      },
      "charge": 0,
      "mass": 207.33234482189462,
      "mf": "C14H23O",
      "monoisotopicMass": 207.17489036086002,
      "unsaturation": 3.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      8,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 9,
        "index": 8,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_I]ozJCaUSaUW\`H",
      "gJP@DjZhCaB\`eAjabgI_TWMU{SwzI@xUT\\Jj~@QALD@",
      "dax@@DjVZjj@hCa@hHhMBCBcbSRssxPnMR|tnjvwgQDApjh\\Jj{@DPI\`R\`cANB@",
      "dcLH@@rJIJIHusUUUVEQUGDApaTCTFcAaQqIiYyEeUu|XOCinZUu[[ucl|n{ozHaNETsaUWf@bALBDDhIpPPbaMB@",
      "dk\\H@@RYVU^ntvjjjjpjJhx\`NDJ\`Z\`uXLJNIMKOHljniokAx]MsRnk[^l]gew[O_tQB\\JigBjnlADBXDHIPS\`\`aEBZDLH",
    ],
    "idCode": "f\`qAB@E@V\\bbbTRqRSNRuUUTuUP@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 23,
        "O": 1,
      },
      "charge": 0,
      "mass": 207.33234482189462,
      "mf": "C14H23O",
      "monoisotopicMass": 207.17489036086002,
      "unsaturation": 3.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      4,
      7,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uAhabgObMfj}_zE@xUT\\JiNEUgBjnPD\`QALD@",
      "daD@@DjWzZjjdBab@xHJBJ@jAjCP\`phxdtl|~DKcToKKZuk{_tI@\\JjGBjIpjf\\Jj@D\`H\`S@aAJBLD@",
      "dcL@@LdbTTSUSUUUU\`TIQI@\\DEAE@UAMAhpXT\\RZV^QYU]_FEqjWeemZv}h{Mkn{~aHCaUPxUQNEUKaUWd@dADBXDHIPQ\`gAIB@",
      "foA@@@LdbTTVrJiKbjjjjjh\`JDTXhdPC\`\`JBE@R\`ePZ|A\`h\\IFbqxbYJgRYln_^A\\MQ^KImMYoMElkT~nMmm]ozDPCaUP\\JhcaUR\\Jjz\`AHADALABAJAFANAIAEA@",
      "fhiA@@@YEDeDddbeQbcMUUUUUDIQPaeBj@\\DYPRhETAjCTPLECaHtVODSITzSMesyB~bAxNc\\ZRzVr~ZKYZj}\\[[Z{_ZGotHcGBjdxURgBjLxUUuPBHBXBDBTBLB\\BRBJBFB@",
    ],
    "idCode": "fhqAA@M@VSKNQQQQKIRiLEUUUMUP@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 24,
        "O": 1,
      },
      "charge": 0,
      "mass": 208.34028557595042,
      "mf": "C14H24O",
      "monoisotopicMass": 208.18271539309,
      "unsaturation": 3,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_ImwzJCaUSaU@",
      "eM@HzCaJBhMXrolvyw}EApjipj\`",
      "gC\`@Dkj@xPhIPZHXisxcYrw[~bPNEUGBj@",
      "gJP@DkZhCaB\`eAjabgI_T[NV{S_zI@xUT\\Jj|HP",
      "gNp@DkVjj@xPhIPZxXirVk_\\[NV{S]u{~bPNEUGBjobDhQa@",
    ],
    "idCode": "fhiAB@O@VTeVUmYqRMZjjjjfh@@",
    "mfInfo": {
      "atoms": {
        "C": 15,
        "H": 25,
        "O": 1,
      },
      "charge": 0,
      "mass": 221.35896222674143,
      "mf": "C15H25O",
      "monoisotopicMass": 221.19054042532002,
      "unsaturation": 3.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "atomMap": [
      9,
    ],
    "cleavedBonds": [
      {
        "atom1": 9,
        "atom2": 10,
        "index": 9,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUAiF_ImwzJCaUSaU@",
      "eM@HzCaJBhMXrolvyo}EApjipjkrD@",
      "gJP@DkjhCaB\`eAjabgI_T[NUzsozI@xUT\\Jj~PSABD@",
      "dax@@DkfZjjDhCa@hHhMBCBcbSRssxPvNR|lmjvwgQDApjh\\Jj{HDpHPR\`cANB@",
      "dcLH@@rJIJIHusUUUVEQUGDApcTDtFcAaQqIiYyEeUu|XOCinZUu[[ucl|n{ozHcNEUKaUWf@bALBDDhIpPPbaMB@",
    ],
    "idCode": "fhiAB@M@V\\bTTRbVJRxIQjjjijj\`@@",
    "mfInfo": {
      "atoms": {
        "C": 15,
        "H": 25,
        "O": 1,
      },
      "charge": 0,
      "mass": 221.35896222674143,
      "mf": "C15H25O",
      "monoisotopicMass": 221.19054042532002,
      "unsaturation": 3.5,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
  {
    "fragmentType": "molecule",
    "idCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
    "mfInfo": {
      "atoms": {
        "C": 16,
        "H": 28,
        "O": 1,
      },
      "charge": 0,
      "mass": 236.393520385644,
      "mf": "C16H28O",
      "monoisotopicMass": 236.21401552201002,
      "unsaturation": 3,
    },
    "parentIDCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
  },
]
`;

exports[`fragment > CCCCCC(CC)CCC 1`] = `
[
  {
    "atomMap": [
      0,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      7,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      10,
    ],
    "cleavedBonds": [
      {
        "atom1": 9,
        "atom2": 10,
        "index": 9,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      6,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      9,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 9,
        "index": 8,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gC\`H@liKT@@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 7,
      },
      "charge": 0,
      "mass": 43.08779296859618,
      "mf": "C3H7",
      "monoisotopicMass": 43.05477522561,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      8,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 8,
        "index": 7,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gC\`H@liKT@@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 7,
      },
      "charge": 0,
      "mass": 43.08779296859618,
      "mf": "C3H7",
      "monoisotopicMass": 43.05477522561,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 3,
        "atom2": 4,
        "index": 3,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gJPH@liJuP@",
    "mfInfo": {
      "atoms": {
        "C": 4,
        "H": 9,
      },
      "charge": 0,
      "mass": 57.114410373442986,
      "mf": "C4H9",
      "monoisotopicMass": 57.07042529007,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      4,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gGPH@liJmU@@",
    "mfInfo": {
      "atoms": {
        "C": 5,
        "H": 11,
      },
      "charge": 0,
      "mass": 71.1410277782898,
      "mf": "C5H11",
      "monoisotopicMass": 71.08607535453,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      5,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gNpH@liLkUT@@",
    "mfInfo": {
      "atoms": {
        "C": 6,
        "H": 13,
      },
      "charge": 0,
      "mass": 85.16764518313659,
      "mf": "C6H13",
      "monoisotopicMass": 85.10172541899,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      4,
    ],
    "cleavedBonds": [
      {
        "atom1": 3,
        "atom2": 4,
        "index": 3,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "dax@\`@VTeeZjh@@",
    "mfInfo": {
      "atoms": {
        "C": 7,
        "H": 15,
      },
      "charge": 0,
      "mass": 99.1942625879834,
      "mf": "C7H15",
      "monoisotopicMass": 99.11737548345,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "diD@\`@VTeYVjj\`@",
    "mfInfo": {
      "atoms": {
        "C": 8,
        "H": 17,
      },
      "charge": 0,
      "mass": 113.22087999283019,
      "mf": "C8H17",
      "monoisotopicMass": 113.13302554791,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      5,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 8,
        "index": 7,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "diD@\`@VTfUvjj\`@",
    "mfInfo": {
      "atoms": {
        "C": 8,
        "H": 17,
      },
      "charge": 0,
      "mass": 113.22087999283019,
      "mf": "C8H17",
      "monoisotopicMass": 113.13302554791,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "ded@\`@VTeVUjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 19,
      },
      "charge": 0,
      "mass": 127.247497397677,
      "mf": "C9H19",
      "monoisotopicMass": 127.14867561237,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      5,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "ded@\`@VTfUWjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 19,
      },
      "charge": 0,
      "mass": 127.247497397677,
      "mf": "C9H19",
      "monoisotopicMass": 127.14867561237,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      8,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 9,
        "index": 8,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "ded@\`@VTee]jjj@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 19,
      },
      "charge": 0,
      "mass": 127.247497397677,
      "mf": "C9H19",
      "monoisotopicMass": 127.14867561237,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "dmT@\`@VTeUeZjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 21,
      },
      "charge": 0,
      "mass": 141.2741148025238,
      "mf": "C10H21",
      "monoisotopicMass": 141.16432567683,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      6,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "dmT@\`@VTeeUzjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 21,
      },
      "charge": 0,
      "mass": 141.2741148025238,
      "mf": "C10H21",
      "monoisotopicMass": 141.16432567683,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "atomMap": [
      9,
    ],
    "cleavedBonds": [
      {
        "atom1": 9,
        "atom2": 10,
        "index": 9,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "dmT@\`@VTeYWZjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 21,
      },
      "charge": 0,
      "mass": 141.2741148025238,
      "mf": "C10H21",
      "monoisotopicMass": 141.16432567683,
      "unsaturation": 0.5,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
  {
    "fragmentType": "molecule",
    "idCode": "dmT@@DjUWzjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 11,
        "H": 24,
      },
      "charge": 0,
      "mass": 156.3086729614264,
      "mf": "C11H24",
      "monoisotopicMass": 156.18780077352,
      "unsaturation": 0,
    },
    "parentIDCode": "dmT@@DjUWzjjh@@",
  },
]
`;
